<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">LibretroDroid</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="controller_arcade_4">Default (4 buttons)</string>
    <string name="controller_arcade_6">Default (6 buttons)</string>
    <string name="controller_default">Default</string>
    <string name="controller_dos_auto">Auto</string>
    <string name="controller_dos_mouse_left">Mouse with Left Stick</string>
    <string name="controller_dos_mouse_right">Mouse with Right Stick</string>
    <string name="controller_dualshock">DualShock</string>
    <string name="controller_genesis_3">Default (3 buttons)</string>
    <string name="controller_genesis_6">Default (6 buttons)</string>
    <string name="controller_landscape">Landscape</string>
    <string name="controller_portrait">Portrait</string>
    <string name="controller_standard">Standard</string>
    <string name="copy">Copy</string>
    <string name="core_name_citra">citra</string>
    <string name="core_name_desmume">desmume</string>
    <string name="core_name_dosbox_pure">dosbox_pure</string>
    <string name="core_name_fbneo">fbneo</string>
    <string name="core_name_fceumm">fceumm</string>
    <string name="core_name_gambatte">gambatte</string>
    <string name="core_name_genesis_plus_gx">genesis_plus_gx</string>
    <string name="core_name_handy">handy</string>
    <string name="core_name_mame2003_plus">mame2003_plus</string>
    <string name="core_name_mednafen_ngp">mednafen_ngp</string>
    <string name="core_name_mednafen_pce_fast">mednafen_pce_fast</string>
    <string name="core_name_mednafen_wswan">mednafen_wswan</string>
    <string name="core_name_melonds">melonds</string>
    <string name="core_name_mgba">mgba</string>
    <string name="core_name_mupen64plus_next_gles3">mupen64plus_next_gles3</string>
    <string name="core_name_pcsx_rearmed">pcsx_rearmed</string>
    <string name="core_name_ppsspp">ppsspp</string>
    <string name="core_name_prosystem">prosystem</string>
    <string name="core_name_snes9x">snes9x</string>
    <string name="core_name_stella">stella</string>
    <string name="core_settings_category_controllers">Controllers</string>
    <string name="core_settings_category_preferences">Preferences</string>
    <string name="core_settings_controller">Controller %1$s</string>
    <string name="core_settings_title">Core Settings</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="dest_title">destination title</string>
    <string name="dialog_saf_not_found">This device does not support the StorageAccessFramework file picker. Please manually copy uncompressed ROM files into %1$s and hit Rescan.</string>
    <string name="directory">Directory</string>
    <string name="discover">Discover</string>
    <string name="display_filter">Display filter</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="empty_view_default">No Items</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message_incompatible_state">This save state is not compatible with the current core version. Please load the latest in-game save or use a previous Lemuroid version.</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="game_menu_change_disk_button">Change Disk</string>
    <string name="game_menu_edit_touch_controls">Edit Controls</string>
    <string name="game_menu_fast_forward">Fast-Forward</string>
    <string name="game_menu_load">Load</string>
    <string name="game_menu_mute_audio">Mute</string>
    <string name="game_menu_quit">Quit</string>
    <string name="game_menu_restart">Restart</string>
    <string name="game_menu_save">Save</string>
    <string name="game_menu_settings">Settings</string>
    <string name="game_menu_title">Game menu</string>
    <string name="none">None</string>
    <string name="pref_key_advanced_settings">advanced_settings</string>
    <string name="pref_key_allow_direct_game_load">allow_direct_game_load</string>
    <string name="pref_key_autosave">autosave</string>
    <string name="pref_key_display_bios_info">display_bios_info</string>
    <string name="pref_key_enable_device_rumble">enable_device_rumble</string>
    <string name="pref_key_enable_rumble">enable_rumble</string>
    <string name="pref_key_extenral_folder">external_folder</string>
    <string name="pref_key_haptic_feedback_mode">haptic_feedback_mode</string>
    <string name="pref_key_hd_mode">hd_mode</string>
    <string name="pref_key_legacy_hd_mode">legacy_hd_mode</string>
    <string name="pref_key_low_latency_audio">low_latency_audio</string>
    <string name="pref_key_max_cache_size">max_cache_size_bytes</string>
    <string name="pref_key_open_cores_selection">open_cores_selection</string>
    <string name="pref_key_open_gamepad_settings">open_gamepad_settings</string>
    <string name="pref_key_open_save_sync_settings">open_save_sync_settings</string>
    <string name="pref_key_rescan">rescan</string>
    <string name="pref_key_reset_settings">reset_settings</string>
    <string name="pref_key_shader_filter">shader_filter_0</string>
    <string name="pref_key_stop_rescan">stop_rescan</string>
    <string name="pref_key_tilt_sensitivity_index">tilt_sensitivity_index</string>
    <string name="rescan">Rescan</string>
    <string name="roms">ROMs</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_misc">Miscellaneous</string>
    <string name="settings_description_advanced_settings">Display advanced settings</string>
    <string name="settings_description_direct_game_load">(Experimental) Reduce loading time and cache usage on supported consoles.</string>
    <string name="settings_description_display_bios_info">Display detected and supported BIOS files</string>
    <string name="settings_description_enable_device_rumble">When no controller is connected vibrate the device instead</string>
    <string name="settings_description_enable_rumble">Enable rumble in supported games and controllers</string>
    <string name="settings_description_gamepad_settings">Configure external gamepads and keyboards</string>
    <string name="settings_description_hd_mode">Apply post-processing upscaling filter</string>
    <string name="settings_description_legacy_hd_mode">Always use legacy HD mode. Trades some quality for performances.</string>
    <string name="settings_description_low_latency_audio">Reduce audio latency on supported devices. Might increase audio glitches.</string>
    <string name="settings_description_open_cores_selection">Select which core is associated to a system</string>
    <string name="settings_description_reset_settings">Reset Lemuroid to its factory settings</string>
    <string name="settings_description_save_sync">Back up and Sync your saves on the cloud</string>
    <string name="settings_title_advanced_settings">Advanced settings</string>
    <string name="settings_title_direct_game_load">Direct game load</string>
    <string name="settings_title_display_bios_info">BIOS</string>
    <string name="settings_title_enable_autosave">Autosave state</string>
    <string name="settings_title_enable_device_rumble">Device rumble</string>
    <string name="settings_title_enable_rumble">Rumble</string>
    <string name="settings_title_enable_touch_feedback">Vibrate on touch</string>
    <string name="settings_title_gamepad_settings">External devices</string>
    <string name="settings_title_hd_mode">HD mode</string>
    <string name="settings_title_legacy_hd_mode">Prefer legacy HD mode</string>
    <string name="settings_title_low_latency_audio">Prefer low-latency audio</string>
    <string name="settings_title_maximum_cache_usage">Cache size limit</string>
    <string name="settings_title_open_cores_selection">Change Cores</string>
    <string name="settings_title_reset_settings">Factory reset</string>
    <string name="settings_title_save_sync">Cloud saves</string>
    <string name="settings_title_tilt_sensitivity">Tilt sensor sensitivity</string>
    <string name="stop">Stop</string>
    <string name="touch_customize_button_done">Done</string>
    <string name="touch_customize_button_reset">Reset</string>
    <string name="touch_customize_info">Drag and Pinch controls to change position and size</string>
</resources>